--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,21 @@
 site_name: 抓鱼的编辑部
 site_url: https://haoyu-zhu.github.io/me/
+nav:
+  - 首页: index.md
+  - 第一部分:
+      - Part1/index.md
+  - 第二部分:
+      - Part2/index.md
+  - 第三部分:
+      - Part3/index.md
+docs_dir: docs/
+
 theme:
   name: material
+  features:
+    - navigation.tabs
+    - search.suggest
+    - search.highlight
+    - search.share
+    - navigation.top
+    - navigation.indexes
